<resources>
    <string name="app_name">Gem Hunt</string>
    <string name="gem_hunt">Gem Hunt</string>
    <string name="lobby">Lobby</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="language_selected">français</string>
    <string name="volume">Volume</string>
    <string name="credits">Credits</string>
    <string name="stats">Stats</string>
    <string name="suppress">←</string>
    <string name="launch">√</string>
    <string name="add">+</string>
    <string name="player1">P1</string>
    <string name="player2">P2</string>
    <string name="player3">P3</string>
    <string name="player4">P4</string>
    <string name="player5">P5</string>
    <string name="player6">P6</string>
    <string name="rollButtonText">Roll</string>
    <string name="passTurnButtonText">Pass turn</string>

</resources>
