<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_settings">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--Title-->
        <TextView
            android:id="@+id/SettingsTextView"
            style="@style/menuTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/settings"
            android:textSize="32sp" />

        <!--Todo-->
        <!--Language-->
        <RelativeLayout
            android:id="@+id/language_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/SettingsTextView"
            >

            <TextView
                android:id="@+id/language"
                style="@style/menuText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:text="@string/language"
                android:textSize="24sp"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/language">

                <TextView
                    android:id="@+id/language_selected"
                    style="@style/menuText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/language_selected"
                    android:textSize="20sp"
                    />

                <ImageView
                    style="@style/menuText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@id/language_selected"
                    android:src="@drawable/ic_keyboard_arrow_left_white_48dp"
                    />

                <ImageView
                    style="@style/menuText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/language_selected"
                    android:src="@drawable/ic_keyboard_arrow_right_white_48dp"
                    />

            </RelativeLayout>

        </RelativeLayout>

        <!--Volume settings-->

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/language_settings"
            android:layout_centerHorizontal="true">

            <Button
                android:id="@+id/credits_button"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/credits"
                />

            <Button
                android:id="@+id/stats_button"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_toEndOf="@id/credits_button"
                android:text="@string/stats"
                />

        </RelativeLayout>

    </RelativeLayout>

</ScrollView>
